--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,8 @@ profile.cov
 /dashboard/assets/package-lock.json
 
 **/yarn-error.log
+
+datadir/logs/*.log
+datadir/node*/geth/
+datadir/node*/geth.ipc
+
